# Speech

./: CMakeLists.txt  README.md  _config.yml  index.md  speech.html  speech.js
scripts/: build.sh  updateTranslations.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h
translations/: Speech_de_DE.ts
ui/: mainwindow.ui
